--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+/* color palette */
+:root {
+  /* color 1 */
+  --color1: hsla(131, 69%, 43%, 1);
+  /* color 2 */
+  --color2: hsla(7, 64%, 54%, 1);
+  /* color 3 */
+  --color3: hsla(58, 100%, 44%, 1);
+  /* light neutral */
+  --color4: hsla(88, 28%, 87%, 1);
+  /* medium neutral */
+  --color5: hsla(196, 28%, 27%, 1);
+  /* dark neutral */
+  --color6: hsla(185, 22%, 10%, 1);
 }
