--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,24 @@ code {
   /* dark neutral */
   --color6: hsla(185, 22%, 10%, 1);
 }
+
+/* text */
+p,
+h1,
+h2,
+h3,
+h4,
+ul,
+li {
+  color: var(--color6);
+}
+
+h1,
+h2,
+h3 {
+  margin: 0px 0px 10px;
+}
+
+h4 {
+  margin: 20px 0px 10px;
+}
