--- a/src/components/Main/Inventory/Inventory.css
+++ b/src/components/Main/Inventory/Inventory.css
@@ -1,6 +1,6 @@
 /* containers */
 .inventoryFlexboxContainer {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
   /* horizontal */
   justify-content: center;
@@ -9,7 +9,7 @@
 }
 
 .inventoryFlexboxItem {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 10px;
   padding: 10px;
 }
