Edit spacing of Header and background colors of elements

--- a/src/components/Main/Auth/Auth.css
+++ b/src/components/Main/Auth/Auth.css
@@ -1,5 +1,6 @@
 /* containers */
 .authFlexboxContainer {
+  background-color: var(--color4);
   display: flex;
   /* horizontal */
   justify-content: center;
