--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 header {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color4);
+  /* background-color: var(--color4); */
   padding: 20px;
 }
