--- a/src/components/Main/Inventory/AddInventory/AddInventory.css
+++ b/src/components/Main/Inventory/AddInventory/AddInventory.css
@@ -1,16 +1,27 @@
+.addInventoryContainer {
+  /* background-color: var(--color9); */
+  border: 5px solid var(--color6);
+  border-radius: 40px;
+  /* box-shadow: offset-x offset-y blur-radius shadow-radius color */
+  box-shadow: -5px 5px 0px 0px var(--color6);
+  margin: 10px;
+  padding: 30px;
+}
+
+.control {
+  margin: 60px 0;
+}
+
+form {
+  font-weight: 500;
+}
+
 fieldset {
-  display: inline;
-  width: 250px;
-  border: 0px solid var(--color6);
-  border-radius: 10px;
-  padding: 5px 0px 10px;
-  margin: 0px;
+  border: 0px;
+  display: block;
 }
 
 legend {
-  /* background-color: var(--color3);
-  border: 1px solid var(--color6);
-  border-radius: 10px; */
   font-size: 1.25rem;
   padding: 0px;
 }
@@ -23,11 +34,12 @@ label {
   display: block;
   width: 250px;
   font-size: 1.25rem;
+  border: 3px solid var(--color6);
+  background-color: var(--color7);
   color: var(--color6);
-  background-color: var(--color4);
-  border: 1px solid var(--color6);
   border-radius: 5px;
   padding: 5px 5px 5px 30px;
   margin: 5px 0px 0px 0px;
-  /* TODO icon */
 }
+
+/* TODO input hover, focus, active */
