--- a/src/components/Main/Inventory/Inventory.css
+++ b/src/components/Main/Inventory/Inventory.css
@@ -1,12 +1,13 @@
 /* containers */
 .inventoryFlexboxContainer {
-  background-color: var(--color4);
+  /* background-color: var(--color4); */
   /* border: 1px solid black; */
   display: flex;
   /* horizontal */
   justify-content: center;
   /* vertical */
   align-items: flex-start;
+  gap: 30px;
 }
 
 .inventoryFlexboxItem {
