--- a/src/components/buttons.module.css
+++ b/src/components/buttons.module.css
@@ -4,13 +4,14 @@ button {
 button:hover {
   cursor: pointer;
 }
+
 .primaryButton {
   /* size and spacing */
   width: 150px;
   height: 40px;
   /* color */
-  background-color: var(--color1);
-  color: var(--color4);
+  background-color: var(--color6);
+  color: var(--color7);
   /* text */
   font-size: 1.25rem;
   font-weight: bolder;
@@ -18,9 +19,7 @@ button:hover {
   border: none;
 }
 
-.primaryButton:hover {
-  color: var(--color3);
-}
+/* TODO primary button hover, focus, active */
 
 /* secondary button */
 .secondaryButton {
@@ -28,14 +27,16 @@ button:hover {
   /* width: 125px; */
   /* height: 40px; */
   /* color */
-  background-color: var(--color4);
-  color: var(--color1);
+  background-color: var(--color7);
+  color: var(--color6);
   /* text */
   /* font-size: 1.25rem; */
   font-weight: bolder;
   /* style */
-  border: 1px solid var(--color1);
+  border: 1px solid var(--color6);
 }
+
+/* TODO secondary button hover, focus, active */
 
 /* TODO tertiary button */
 .tertiaryButton {
@@ -43,3 +44,5 @@ button:hover {
   background-color: transparent;
   text-decoration: underline;
 }
+
+/* TODO tertiary button hover, focus, active */
