--- a/src/components/Main/Inventory/Inventory.css
+++ b/src/components/Main/Inventory/Inventory.css
@@ -1,17 +1,20 @@
 /* containers */
 .inventoryFlexboxContainer {
   /* background-color: var(--color4); */
-  /* border: 1px solid black; */
+  border: 1px solid red;
   display: flex;
+  flex-direction: column;
   /* horizontal */
   justify-content: center;
   /* vertical */
   align-items: flex-start;
-  gap: 30px;
+  /* gap: 30px; */
+  width: 100%;
 }
 
 .inventoryFlexboxItem {
-  /* border: 1px solid black; */
-  margin: 10px;
+  border: 1px solid blue;
+  margin: 10px auto;
   padding: 10px;
+  width: 725px;
 }
