Style AddInventory/ layout, TODO: remove unnecessary comments in css

--- a/src/components/buttons.module.css
+++ b/src/components/buttons.module.css
@@ -5,6 +5,10 @@ button:hover {
   cursor: pointer;
 }
 
+.addItemButton {
+  width: 450px;
+}
+
 .primaryButton {
   /* size and spacing */
   width: 150px;
