--- a/src/components/Main/Inventory/AddInventory/AddInventory.css
+++ b/src/components/Main/Inventory/AddInventory/AddInventory.css
@@ -8,23 +8,48 @@
   padding: 30px;
   width: 650px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   gap: 10px;
 }
 
 .addInventoryForm {
-  background-color: pink;
-  width: 55%;
+  /* border: 5px dotted red; */
+  width: 100%;
+  display: flex;
+  /* flex-direction: column; */
 }
 
-.addInventoryImage {
-  width: 35%;
-  border: 3px solid black;
-  padding: 10px;
+.formInputs {
+  /* border: 7px solid purple; */
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-.control {
-  margin: 60px 0;
+.nameInput {
+  /* background-color: yellow; */
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.stockedValueInput {
+  /* border: 5px dotted purple; */
+  margin: 0px;
+  padding: 0px;
+}
+
+.formAddItem {
+  /* border: 4px dotted green; */
+  /* height: 400px; */
+  width: 20%;
+  /* width: 100%; */
+  /* align-items: center;
+  justify-content: center; */
+  align-self: flex-end;
+  /* margin-right: -5px; */
 }
 
 form {
@@ -32,7 +57,9 @@ form {
 }
 
 fieldset {
+  /* border: 12px solid pink; */
   border: 0px;
+  /* margin-top: 50px; */
   /* display: block; */
 }
 
@@ -47,7 +74,7 @@ label {
 
 .itemInput {
   display: block;
-  width: 250px;
+  width: 275px;
   font-size: 1.25rem;
   border: 3px solid var(--color6);
   background-color: var(--color7);
